# video-dubbing-dls-project

./: .gitignore  README.md  pyproject.toml
config/: config.py  config.yaml
notebooks/: dataset.ipynb  eda.ipynb  main.ipynb  report.ipynb  test.ipynb  trainer.ipynb
src/: asr.py  helpers.py  heplers.py  main.py  mt.py  pipeline.py  tts.py  utils.py  vad.py
