[project]
name = "video-dubbing-dls-project"
version = "0.1.0"
description = "Final project on the topic of video dubbing with a focus on TTS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dtw>=1.4.0",
    "dtw-python>=1.5.3",
    "ipykernel>=6.29.5",
    "librosa>=0.11.0",
    "moviepy>=2.2.1",
    "openai-whisper>=20250625",
    "pydub==0.25.1",
    "simalign==0.4",
    "torch==2.7.1",
    "transformers==4.52.4",
]
