[project]
name = "video-dubbing-dls-project"
version = "0.1.0"
description = "Final project on the topic of video dubbing with a focus on TTS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "librosa>=0.11.0",
    "moviepy>=2.2.1",
    "numpy>=2.2.6",
    "openai-whisper>=20250625",
    "pydantic>=2.11.7",
    "pydub==0.25.1",
    "simalign==0.4",
    "torch==2.7.1",
    "torchaudio>=2.7.1",
    "transformers==4.52.4",
]
